# lipl-storage-spin

./: .gitignore  Cargo.toml  README.md  bombardier.fish  bombardier.sh  download-pwa.fish  download-pwa.sh  init_data.sh  migrations.sql  spin.toml  use-development-pwa.fish
.cargo/: config.toml
.github/workflows/: spin.yaml
assets/: .last_build_id  flutter_service_worker.js  index.html  main.dart.js  manifest.webmanifest  version.json
assets/assets/: NOTICES
connection/: Cargo.toml  build.rs
connection/src/: lib.rs  rusqlite.rs  rusqlite_connection.rs  spin_sqlite.rs  spin_sqlite_connection.rs
lipl-storage-test/: Cargo.toml
lipl-storage-test/src/: lib.rs
model/: Cargo.toml
model/src/: basic_authentication.rs  convert.rs  error.rs  lib.rs  parts.rs  response.rs
spin-sqlite-connection/: Cargo.toml  README.md
spin-sqlite-connection/src/: connection.rs  lib.rs  rusqlite.rs  spin_sqlite.rs
src/: api.rs  handler.rs  lib.rs  message.rs  persistence.rs  rusqlite_connection.rs  spin_sqlite_connection.rs
