[package]
name = "lipl-storage-spin"
description = "Lipl Storage rest api on spin"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[dependencies]
model = { path = "model/", features = ["response"] }
spin-sdk = "3.1.0"
spin-sqlite-connection = { version = "0.2.2", path = "spin-sqlite-connection" }

[workspace.package]
authors = ["paulusminus <info@paulmin.nl>"]
repository = "https://github.com/paulusminus/lipl-storage-spin"
edition = "2021"
version = "0.10.7"

[workspace]
members = ["spin-sqlite-connection", "model"]
