[package]
name = "lipl-storage-spin"
description = "Lipl Storage rest api on spin"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[dependencies]
axum = { version = "0.8.9", default-features = false, features = ["json", "macros"] }
model = { path = "model/", features = ["response"] }
spin-sdk = "6.0.0"
spin-sqlite-connection = { version = "0.3.0", path = "spin-sqlite-connection" }
tower-service = "0.3.3"

[workspace.package]
authors = ["paulusminus <info@paulmin.nl>"]
repository = "https://github.com/paulusminus/lipl-storage-spin"
edition = "2024"
version = "0.10.11"

[workspace]
members = ["spin-sqlite-connection", "model"]
