[package]
name = "model"
description = "Lyrics and playlists types"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[features]
response = ["dep:spin-sdk", "dep:base64", "dep:serde_json"]

[dependencies]
base64 = { version = "0.22.1", optional = true }
bs58 = "0.5.1"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
serde_with = { version = "3.15.1", default-features = false, features = [
    "macros",
] }
spin-sdk = { version = "5.1.1", optional = true }
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rusqlite = { version = "0.38.0" }
