[package]
name = "model"
description = "Lyrics and playlists types"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["response"]
response = ["dep:base64", "dep:spin-sdk"]

[dependencies]
axum-core = "0.5.6"
base64 = { version = "0.22.1", optional = true }
bs58 = "0.5.1"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.15.1", default-features = false, features = [
    "macros",
] }
spin-sdk = { version = "6.0.0", default-features = false, features = ["http", "sqlite", "variables"], optional = true }
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v7", "js"] }
wasip3 = { version = "0.6.0", features = ["http-compat"] }
