[package]
name = "spin-sqlite-connection"
description = "Spin Sqlite Connection abstraction"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
spin-sdk = "3.0.1"

[build-dependencies]
cfg_aliases = "0.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rusqlite = { version = "0.31" }
