[package]
authors = ["Paul Min <info@paulmin.nl>"]
description = "Spin Sqlite Connection abstraction"
edition = "2021"
license = "MIT"
name = "spin-sqlite-connection"
repository = "https://github.com/paulusminus/lipl-storage-spin"
version = "0.2.3"

[dependencies]
spin-sdk = "3.0.1"

[build-dependencies]
cfg_aliases = "0.2.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rusqlite = { version = "0.35.0" }
